--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <header>
         <nav></nav>
     </header>
-    <main>
+    <div class="mainmarch">
         <section class="bg-banner">
+            <img src="image/Spring 1.png" alt="" class="flower-top">
             <div class="wrap-banner-block-content flex-row">
                 <div class="banner-block-content ">
                     <h1>Проведите ваш особенный день <span>в РИГАМОЛЛ</span></h1>
@@ -25,13 +26,13 @@
                     <div class="block-content-wrap flex-row">
                         <div class="block-content-img"><img src="image/Group10.png" alt=""></div>
                         <div class="block-content-text">Посвятите день себе 
-                        <p>(скидки до 50% на косметику и подарки за покупки+ профессиональный макияж)</p>
+                        <p>(скидки до 70%, подарки за покупку, профессиональный макияж)</p>
                         </div>
                     </div>
                     <div class="block-content-wrap flex-row">
                         <div class="block-content-img"><img src="image/Group10.png" alt=""></div>
                         <div class="block-content-text">Обновите интерьер
-                        <p>(мастер-классы по дизайну, праздничные спецпредложения)</p>
+                        <p>(беспрецедентные скидки и подарки от магазинов мебели)</p>
                         </div>
                     </div>
                     <img class="block-content-pos-first" src="image/Rose-leave12.png" alt="">
@@ -43,9 +44,9 @@
                     <img src="image/8.png" alt="8">
                     <img src="image/Spring 1.png" alt="">
                     <img src="image/Flowers.png" alt="">
-                    <img src="image/50%.png" alt="">
-                    <img src="image/35%.png" alt="">
-                    <img src="image/70%.png" alt="">
+                    <img src="image/50.png" alt="">
+                    <img src="image/35.png" alt="">
+                    <img src="image/70.png" alt="">
                     <img src="image/Rose-leave1.png" alt="">
                     <img src="image/Rose-leave 2.png" alt="">
                     <img src="image/Rose-leave 3.png" alt="">
@@ -108,16 +109,44 @@
                         <div class="free">БЕСПЛАТНО</div>
                     </div>
                     <div class="block-entertainment-content flex-col">
-                        <div class="entertainment-content-text">Праздничная программа “Семь желаний мамы”</div>
+                        <div class="entertainment-content-text">Выступление трио музыкантов</div>
                         <div class="entertainment-content-time">Начало: 14:00 <span>1-й этаж (у фонтана)</span></div>
                     </div>
                 </div>
             </div>
             <div class="wrap-entertainment-banner flex-row">
-                <div><img src="image/Rectangle5.png" alt=""></div>
-                <div><img src="image/2.png" alt=""></div>
-                <div><img src="image/3.png" alt=""></div>
-                <div><img src="image/4.png" alt=""></div>
+                <div><img src="image/Rectangle5.png" alt="">
+<div class="inside-block">
+                        <div class="inside-block--title">Ярмарка 1 этаж
+                        <span>«Весенняя Ярмарка»</span></div>
+                        <div class="inside-block--percent">Подарки к праздникам</div>
+                        <a href="/news/vesennyaya_yarmarka_v_rigamoll/">Подробнее</a>
+                    </div></div>
+                <div><img src="image/2.png" alt="">
+<div class="inside-block">
+                        <div class="inside-block--title" style="text-align:center;width: 100%;height: 100%;display: flex;align-items: center;justify-content: center;">
+                        <span>Встречаем весну!</span></div>
+                        <div class="inside-block--percent"></div>
+                    </div>
+</div>
+                <div><img src="image/3.png" alt="">
+<div class="inside-block">
+                        <div class="inside-block--title">
+                        Блинчики
+                        <span>«Шоколадница»</span></div>
+                        <div class="inside-block--percent"></div>
+                        <a href="/promo/blinchik_dnya_za_119_rubley/">Подробнее</a>
+                    </div>
+</div>
+                <div><img src="image/4.png" alt="">
+<div class="inside-block">
+                        <div class="inside-block--title">
+                        Подарки
+                        <span>Nespresso</span></div>
+                        <div class="inside-block--percent"></div>
+                        <a href="/news/nespresso_predstavlyaet_novuyu_kofeynuyu_sistemu_vertuo/">Подробнее</a>
+                    </div>
+</div>
             </div>
         </section>
         <section class="wrap-m_c">
@@ -138,12 +167,12 @@
                         <img src="image/Asset 2.png" alt="">
                         <img src="image/Asset 1.png" alt="">
                     </div>
-                    <div class="m_c-block-content">Флеш-сессия 
+                    <div class="m_c-block-content">Флеш-сессия<br> 
                         профессионального макияжа
                         <div class="m_c-block-content-time">12:00-20:00</div>
                     </div>
                 </div>
-                <div class="m_c-block flex-row">
+                <div class="m_c-block flex-row cr">
                     <div class="m_c-block-content">«Полезные конфеты и весенние смузи»
                         <p>(мастер-класс от шеф-повара)</p>
                         <div class="m_c-block-content-time">Начало: 13:00 и 15:00</div>
@@ -151,6 +180,7 @@
                     <div class="m_c-block-baner color-second">
                         <img src="image/Rectangle-5.png" alt="">
                         <img src="image/image 2.png" alt="">
+                        <img src="image/image-3.png" alt="">
                     </div>
                 </div>
                 <div class="m_c-block flex-row">
@@ -159,31 +189,114 @@
                         <img src="image/5.png" alt="">
                         <img src="image/10.png" alt="">
                     </div>
-                    <div class="m_c-block-content">International Gym»
+                    <div class="m_c-block-content">«International Gym»
                         <p>(Детский гимнастический центр)</p>
-                        <div class="m_c-block-content-time m_c-block-content-discounts">скидки на абонементы до <span>-20%</span>
+                        <div class="m_c-block-content-time m_c-block-content-discounts">скидки на абонементы до <span>20%</span><br>
                      и бесплатные пробные занятия для всех желающих!</div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="wrap-discounts">
-            <div class="m_c-pos">
-                <img src="image/" alt="">
-                <img src="image/" alt="">
-                <img src="image/" alt="">
-                <img src="image/" alt="">
-            </div>
             <div class="wrap-title">
                 <div class="title">Скидки</div>
                 <h2>Скидки до 70% в честь 8 марта! </h2>
             </div>
-
+            <img src="image/Rose (2).png" alt="" class="rose-banner-top">
+            <div class="m_c-block flex-row offer-block">
+                <div class="m_c-block-baner color-four">                    
+                    <img src="image/image14.png" alt="">
+                    <img src="image/logococ.png" alt="">
+                    <img src="image/Rose-leave.png" alt="">
+                </div>
+                <div class="m_c-block-content">«L’OCCITANE» 
+                    <p>(магазин косметики и парфюмерии)</p>
+                    <div class="m_c-block-content-time m_c-block-content-discounts">Подарочные наборы с выгодой<br> до <span>30%</span></div>
+                </div>
+            </div>
+            <div class="m_c-block flex-row offer-block cr">
+                <div class="m_c-block-content">«Williams et Oliver»
+                    <p>(правильные вещи для кухни)</p>
+                    <div class="m_c-block-content-time m_c-block-content-discounts">скидки до <span>40%</span></div>
+                </div>
+                <div class="m_c-block-baner color-five">
+                    <img src="image/Rectangle-5.png" alt="">
+                    <img src="image/image112.png" alt="">
+                </div>
+            </div>
+            <div class="m_c-block flex-row offer-block">
+                <div class="m_c-block-baner color-six">                    
+                    <img src="image/image 2 (1).png" alt="">
+                    <img src="image/image 3 (1).png" alt="">
+                    <img src="image/Rectangle 311.png" alt="">
+                </div>
+                <div class="m_c-block-content">«Marc & André» 
+                    <p>(магазин белья)</p>
+                    <div class="m_c-block-content-time m_c-block-content-discounts"><span>5 000 рублей</span><br> в подарок на покупку от Marc & André</div>
+                </div>
+            </div>
+            <div class="m_c-block flex-row offer-block cr">
+                <div class="m_c-block-content">«Estetica Vision»
+                    <p>(дизайнерская мебель премиум класса)</p>
+                    <div class="m_c-block-content-time m_c-block-content-discounts">скидки до <span>35%</span> и подарки</div>
+                </div>
+                <div class="m_c-block-baner color-seven">
+                    <img src="image/Rectangle 3.png" alt="">
+                    <img src="image/image 9.png" alt="">
+                </div>
+            </div>
+            <div class="m_c-block flex-row offer-block">
+                <div class="m_c-block-baner color-eighth">                    
+                    <img src="image/image 14.png" alt="">
+                    <img src="image/image 16.png" alt="">
+                    <img src="image/image 17.png" alt="">
+                    <img src="image/image 15.png" alt="">
+                    <img src="image/Rectangle 3 (1).png" alt="">
+                </div>
+                <div class="m_c-block-content">«TOY.RU» 
+                    <p>(магазин игрушек)</p>
+                    <div class="m_c-block-content-time m_c-block-content-discounts">скидки <span>70%</span> для маленьких принцесс</div>
+                </div>
+            </div>
+            <img src="image/Rose-leave (2).png" alt="" class="rose-banner">
+            <img src="image/Rose (1).png" alt="" class="tulpan-banner">
             <div class="wrap-discounts-baner flex-row">
-                <div ><img src="image/image 10.png" alt=""></div>
-                <div ><img src="image/image 11.png" alt=""></div>
-                <div > <img src="image/image 12.png" alt=""></div>
-                <div ><img src="image/image 13.png" alt=""></div>
+                <div class="discounts-baner-content">
+<img src="image/image 10.png" alt="">
+                    <div class="inside-block">
+                        <div class="inside-block--title">Мебельный салон
+                        <span>«Elfa»</span></div>
+                        <div class="inside-block--percent">-25 <span>%</span></div>
+                        <a href="/promo/skidka_25_na_ves_assortiment_setchatykh_sistem_khraneniya_elfa/">Подробнее</a>
+                    </div>
+</div>
+                <div class="discounts-baner-content">
+<img src="image/image 11.png" alt="">
+<div class="inside-block">
+                        <div class="inside-block--title">Посуда
+                        <span>«Gipfel»</span></div>
+                        <div class="inside-block--percent">-30 <span>%</span></div>
+                        <a href="/promo/privetstvuem_vsekh_lyubiteley_khoroshey_kukhni/">Подробнее</a>
+                    </div>
+</div>
+                <div class="discounts-baner-content">
+<img src="image/image 12.png" alt="">
+                    <div class="inside-block">
+                        <div class="inside-block--title">Багетная мастерская
+                        <span>«Арт Рама»</span></div>
+                        <div class="inside-block--percent">-20 <span>%</span></div>
+                        <a href="/mgh/detail/set_bagetnykh_masterskikh_art_rama/">Подробнее</a>
+                    </div>
+</div>
+                <div class="discounts-baner-content">
+<img src="image/image 13.png" alt="">
+                    <div class="inside-block">
+                        <div class="inside-block--title">Магазин освещения
+                        <span>«Империя Люстр»</span></div>
+                        <div class="inside-block--percent">-50 <span>%</span></div>
+                        <a href="/mgh/detail/imperiya_lyustr/">Подробнее</a>
+                    </div>
+</div>
             </div>
         </section>
         <section class="wrap-last-block">
@@ -194,7 +307,9 @@
             </div>
             <div class="wrap-title last-block-title">
                 <h2>Проведите незабываемый день</h2>
+                <br>
+                <span>в РИГАМОЛЛ</span>
             </div>
-    </main>
+    </div>
 </body>
 </html>
